Channged settings grammar, fixed overwrite bug

--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,12 @@
 [Overrides]
-; Overrides the supported check for current moons. This allows you to, in theory, allow moons that the program auto ignores
-; You MUST use the moon IDs that are seen in moons.json. 
+; Overrides the supported check for current moons. This allows you to allow moons that the program auto ignores, or ban moons the program adds to logic
+; The script will auto-ignore all Warp Painting moons, revisit moons, postgame moons, hint art moons, and tourist moons
+; Seed moons are ADDED into logic
+
+; You MUST use the moon IDs that are seen in candle's data (check github page). 
 ; Story moon logic will not be affected
 
 
 ; Example:
 ; 139 = true
 ; 339 = false
-
-
-[Settings]
