Added WP skip Support

--- a/settings.ini
+++ b/settings.ini
@@ -10,3 +10,15 @@
 ; Example:
 ; 139 = true
 ; 339 = false
+
+; Common ones:
+; 289 "Secret Path to Lake Lamode
+; 338 "A Treasure Made from Coins"
+; 539 "Secret Path to Shiveria
+; 199 - 201 "Desert Gardening: ..."
+
+
+[Settings]
+
+Peace-Skips = false
+; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
