added more settings (such as spoiler log); override options now shown in randomizer.txt

--- a/settings.ini
+++ b/settings.ini
@@ -3,9 +3,9 @@
 ; The script will auto-ignore all Warp Painting moons, revisit moons, postgame moons, hint art moons, and tourist moons
 ; Seed moons are ADDED into logic
 
-; You MUST use the moon IDs that are seen in candle's data (check github page). 
+; You MUST use the moon locations in the arrays that are seen in candle's data (check github page). 
+; Moon IDs may be used, but must be set to one value lower (ie moon ID 140 should be written as 139)
 ; Story moon logic will not be affected
-
 
 ; Example:
 ; 139 = true
@@ -20,5 +20,12 @@
 
 [Settings]
 
+Log-Spoilers = false
+; Setting this to true will log "spoilers" in the terminal window 
+; FEATURE STILL IN DEVELOPMENT, numbers may be innaccurate 
+
 Peace-Skips = false
 ; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
+
+Bowser-Story-End = false
+; Setting this to true will result in Bowser's Kingdom world peace moons removed from logic, meaning routes can end after the Mecha Broodal fight 100% of the time
