fixed override issues

--- a/settings.ini
+++ b/settings.ini
@@ -1,10 +1,9 @@
 [Overrides]
 ; Overrides the supported check for current moons. This allows you to allow moons that the program auto ignores, or ban moons the program adds to logic
-; The script will auto-ignore all Warp Painting moons, revisit moons, postgame moons, hint art moons, and tourist moons
+; The script will auto-ignore all Warp Painting moons, revisit moons, postgame moons, Hint Art moons, and Tourist moons
 ; Seed moons are ADDED into logic
 
-; You MUST use the moon locations in the arrays that are seen in candle's data (check github page). 
-; Moon IDs may be used, but must be set to one value lower (ie moon ID 140 should be written as 139)
+; You MUST use the IDs that are seen in candle's data (check github page)
 ; Story moon logic will not be affected
 
 ; Example:
@@ -12,10 +11,11 @@
 ; 339 = false
 
 ; Common ones:
-; 289 "Secret Path to Lake Lamode
-; 338 "A Treasure Made from Coins"
-; 539 "Secret Path to Shiveria
-; 199 - 201 "Desert Gardening: ..."
+; 290 "Secret Path to Lake Lamode!"
+; 339 "A Treasure Made from Coins"
+; 540 "Secret Path to Shiveria!"
+; 200 - 203 "Desert Gardening: ..."
+; 408 "Twist 'n' Turn-Up Treasure"
 
 
 [Settings]
@@ -27,5 +27,5 @@ Log-Spoilers = false
 Peace-Skips = false
 ; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
 
-Bowser-Story-End = false
-; Setting this to true will result in Bowser's Kingdom world peace moons removed from logic, meaning routes can end after the Mecha Broodal fight 100% of the time
+Bowser-Story-End = true
+; Setting this to true will result in Bowser's Kingdom world peace moons removed from logic, meaning routes will end after the Mecha Broodal fight 100% of the time
