Optimized settings reading & randomization

--- a/settings.ini
+++ b/settings.ini
@@ -15,6 +15,7 @@
 ; 339 "A Treasure Made from Coins"
 ; 540 "Secret Path to Shiveria!"
 ; 200 - 203 "Desert Gardening: ..."
+; 585 - 588 "Sea Gardening: ..."
 ; 408 "Twist 'n' Turn-Up Treasure"
 
 
@@ -28,4 +29,4 @@ Peace-Skips = false
 ; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
 
 Bowser-Story-End = true
-; Setting this to true will result in Bowser's Kingdom world peace moons removed from logic, meaning routes will end after the Mecha Broodal fight 100% of the time
+; Setting this to true will result in Bowser's Kingdom world peace moons removed from logic, meaning routes can end after the Mecha Broodal fight 100% of the time
