--- a/settings.ini
+++ b/settings.ini
@@ -3,27 +3,17 @@
 ; The script will auto-ignore all Warp Painting moons, revisit moons, postgame moons, Hint Art moons, and Tourist moons
 ; Seed moons are ADDED into logic
 
-; You MUST use the IDs that are seen in candle's data (check github page)
+; Look at the github's wiki page for a list of moon names with IDs
+; https://github.com/Minibeast/SMO-Randomizer/wiki/Moon-IDs
 ; Story moon logic will not be affected
 
 ; Example:
 ; 139 = true
 ; 339 = false
 
-; Common ones:
-; 290 "Secret Path to Lake Lamode!"
-; 339 "A Treasure Made from Coins"
-; 540 "Secret Path to Shiveria!"
-; 200 - 203 "Desert Gardening: ..."
-; 585 - 588 "Sea Gardening: ..."
-; 408 "Twist 'n' Turn-Up Treasure"
 
 
 [Settings]
-
-Log-Spoilers = false
-; Setting this to true will log "spoilers" in the terminal window 
-; FEATURE STILL IN DEVELOPMENT, numbers may be innaccurate 
 
 Peace-Skips = false
 ; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
