option to flip back to 1.1.4 CSS

--- a/settings.ini
+++ b/settings.ini
@@ -15,6 +15,9 @@
 
 [Settings]
 
+Old-CSS = false
+; Setting this to true will generate the old randomizer.html CSS format, which has a less boxy look
+
 Peace-Skips = false
 ; Setting this to true will add the common peace skips into logic (i.e Inverted Pyramid Clip and Snow Clip)
 
